# social-login

./: .python-version  README.md  pyproject.toml
fb_login/: db.sqlite3
fb_login/config/: settings.py  urls.py
fb_login/login/: views.py
fb_login/members/: apis.py  serializer.py  urls.py
fb_login/template/: login.html
